// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display the required icon for fields with hideRequired, but have a state of invalid 1`] = `
<fieldset
  className="checkbox-field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <legend
    className="legend-group"
    id="terra-checkbox-field-description-10"
  >
    <div
      className="legend"
    >
      <span
        className="error-icon"
      />
      <div
        aria-hidden="true"
        className="required"
      >
        *
      </div>
      <span
        className="visually-hidden-text"
      >
        Terra.form.field.required
         
      </span>
      Hidden Required CheckboxField
    </div>
  </legend>
</fieldset>
`;

exports[`should hide the legend when requested 1`] = `
<fieldset
  className="checkbox-field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <legend
    className="legend-group legend-group-hidden"
    id="terra-checkbox-field-description-12"
  >
    <div
      class="application-legend"
      className="legend"
    >
      Hidden Legend legend
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
</fieldset>
`;

exports[`should hide the required indicator when requested 1`] = `
<fieldset
  className="checkbox-field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <legend
    className="legend-group"
    id="terra-checkbox-field-description-9"
  >
    <div
      className="legend"
    >
      Hidden Required CheckboxField
      <span
        className="required-hidden"
      >
        *
      </span>
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
</fieldset>
`;

exports[`should render a default checkbox field 1`] = `
<fieldset
  className="checkbox-field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <legend
    className="legend-group"
    id="terra-checkbox-field-description-1"
  >
    <div
      className="legend"
    >
      Default CheckboxField
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
</fieldset>
`;

exports[`should render a default checkbox field even if it has an undefined child 1`] = `
<fieldset
  className="checkbox-field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <legend
    className="legend-group"
    id="terra-checkbox-field-description-2"
  >
    <div
      className="legend"
    >
      Default CheckboxField
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
</fieldset>
`;

exports[`should render a help message 1`] = `
<fieldset
  className="checkbox-field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <legend
    className="legend-group"
    id="terra-checkbox-field-description-5"
  >
    <div
      className="legend"
    >
      Help CheckboxField
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
  <div
    className="help-text"
    id="terra-checkbox-field-description-help-6"
  >
    This will help up determine how many chairs to request
  </div>
</fieldset>
`;

exports[`should render an invalid checkbox field 1`] = `
<fieldset
  className="checkbox-field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <legend
    className="legend-group"
    id="terra-checkbox-field-description-3"
  >
    <div
      className="legend"
    >
      <span
        className="error-icon"
      />
      Invalid CheckboxField
    </div>
  </legend>
  <div
    className="error-text"
    id="terra-checkbox-field-description-error-4"
  >
    Test Error
  </div>
</fieldset>
`;

exports[`should render an optional part on the label 1`] = `
<fieldset
  className="checkbox-field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <legend
    className="legend-group"
    id="terra-checkbox-field-description-7"
  >
    <div
      className="legend"
    >
      Optional CheckboxField
      <span
        className="optional"
      >
        Terra.form.field.optional
      </span>
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
</fieldset>
`;

exports[`should render required checkbox field 1`] = `
<fieldset
  className="checkbox-field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <legend
    className="legend-group"
    id="terra-checkbox-field-description-8"
  >
    <div
      className="legend"
    >
      <div
        aria-hidden="true"
        className="required"
      >
        *
      </div>
      <span
        className="visually-hidden-text"
      >
        Terra.form.field.required
         
      </span>
      Required CheckboxField
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
</fieldset>
`;

exports[`should render the legend with custom attributes properly 1`] = `
<fieldset
  className="checkbox-field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <legend
    className="legend-group"
    id="terra-checkbox-field-description-11"
  >
    <div
      class="application-legend"
      className="legend"
    >
      Custom Legend CheckboxField
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
</fieldset>
`;
